# sigmatism_fix

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  codemap.md  environment.yml  pyproject.toml  setup_pod.sh
.claude/commands/: speckit.conclude.md  speckit.implement.md
.specify/memory/: constitution.md
configs/: default.yaml  resynthesis.yaml
data/test/khovansky/: SMOKE_OUTPUTS.md  khovansky_no_hard_s_reference.txt  khovansky_no_s_reference.txt
deploy/: RUNBOOK.md  bootstrap_pod.sh  start_services.sh
docs/: gradio_pipeline_class_diagram.puml  realtime_optimization.md
scripts/: run_gradio_app.py
src/apps/gradio_app/: app.py  persistence.py  runner.py  schema.py
src/config/: schema.py
src/data/: audio_adapter.py  masking.py
src/inference/: omnivoice_adapter.py  word_splice.py
src/pipelines/: resynthesis_pipeline.py
src/preprocessing/: __init__.py  asr.py  forced_aligner.py  gigaam_aligner.py  hard_s_filter.py  phonemizer.py
src/utils/: config.py  seed.py
tests/: conftest.py
tests/unit/: test_masking.py  test_word_splice.py
tests/unit/apps/gradio_app/: test_app.py  test_input_validation.py  test_persistence.py  test_runner_lock.py
tests/unit/data/: test_audio_adapter.py
tests/unit/inference/: test_omnivoice_adapter.py
tests/unit/pipelines/: test_resynthesis_pipeline.py  test_resynthesis_ref_audio.py
tests/unit/preprocessing/: test_asr.py  test_forced_aligner.py  test_gigaam_aligner.py  test_hard_s_filter.py  test_phonemizer.py
tests/unit/utils/: test_config.py  test_seed.py
